# documentation

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: index.md
llm-server/: pyproject.toml
llm-server/api/endpoints/: index.html
llm-server/api/routing/: index.html
llm-server/css/: admonition-requests.css
llm-server/docker/: index.html
llm-server/getting-started/: index.html
llm-server/llm/chat/: index.html
llm-server/llm/exhibits/: index.html
llm-server/llm/interacting/: index.html
llm-server/llm/prompts/: index.html
llm-server/llm/running-models/: index.html
llm-server/parser/: index.html
llm-server/parser/emotions/: index.html
llm-server/parser/expressions/: index.html
llm-server/parser/lexer/: index.html
llm-server/parser/parser/: index.html
llm-server/parser/tokens/: index.html
llm-server/project-structure/: index.html
llm-server/src/: route.py  stt.py  tts.py  util.py
llm-server/src/llm/: chat_history.py  exhibits.py  llm.py  prompt.py
llm-server/src/parsing/: expression.py  lexer.py  parser.py  token.py
llm-server/src/resources/: exhibit-list.yml
llm-server/src/resources/llm/premade/de/: commands.txt  errors.txt  grammar.txt  premise.txt
llm-server/src/resources/llm/premade/en/: commands.txt  errors.txt  grammar.txt  premise.txt
llm-server/src/resources/tts/thorsten-model/: checkpoint.pth  config.json
llm-server/src/resources/tts/training-data/de-neutral/: metadata.list
llm-server/stt/: index.html
llm-server/tts/: index.html
llm-server/tts/tts/: index.html
(+97 files in other folders)
