[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-server"
version = "0.1.0"
requires-python = "== 3.10.*"
dependencies = [
    "flask>=3.1.1",
    "melotts",
    "mkdocs>=1.6.1",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "myshell-openvoice",
    "nltk>=3.9.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-html>=4.1.1",
    "pytest-timeout>=2.4.0",
    "python-magic>=0.4.27",
    "setuptools>=70.2.0",
    "soundfile>=0.13.1",
    "torch==2.7.0+cu128",
    "torchaudio==2.7.0+cu128",
    "waitress>=3.0.2",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

# Required in order to be able to include OpenVoice checkpoints 
# in the build as they're ignored by .gitignore
[tool.hatch.build]
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["src", "src/resources"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
myshell-openvoice = { git = "https://github.com/myshell-ai/OpenVoice" }
melotts = { git = "https://github.com/myshell-ai/MeloTTS.git" }
torch = {index = "pytorch-cu128"}
torchaudio = {index = "pytorch-cu128"}

